cargo-features = ["strip"]

[package]
name = "rnu"
version = "0.2.0"
authors = ["Mikołaj Rosowski <m.rosowski1@wp.pl>"]
edition = "2018"
description = "Rename files to unique names"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
panic = "abort"
strip = "symbols"

[dependencies]
anyhow = "1.0.34"
clap = "2.33.3"
uuid = { version = "0.8", features = ["v4"] }
